# OpenGLProjects

CoordinateSystems/Perspective/: CMakeLists.txt  _filedir  fragmentShader.glsl  main.c  vertexShader.glsl
Cube/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Cube/include/: cube.h
Cube/src/: cube.c
HelloTriangle/Excercises/: CMakeLists.txt
HelloTriangle/OpenGLProject1/: CMakeLists.txt  main.c
HelloTriangle/OpenGLProject1/.cache/clangd/index/: __stdarg___gnuc_va_list.h.BD19C321B39FB03F.idx  __stddef_max_align_t.h.D495B7936F384D52.idx  __stddef_null.h.73C6A487A4397DA2.idx  __stddef_nullptr_t.h.0EF5C316E4793F68.idx  __stddef_offsetof.h.0CB05E4CDD119A8E.idx  __stddef_ptrdiff_t.h.D1C8BCC0A3402E8F.idx  __stddef_size_t.h.6EB138E308D9267D.idx  __stddef_unreachable.h.4C0C57ED4D2E6917.idx  __stddef_wchar_t.h.FC6E778DD3CC6D81.idx  features.h.5A4ED7C80201A723.idx  glad.h.2D1DD382631E5A14.idx  glad.h.C6E631C9A85417A4.idx  glfw3.h.5F4812117612D8F6.idx  khrplatform.h.7A4EB12427BB87B6.idx  khrplatform.h.D36F1E4D236BD0F6.idx  libc-header-start.h.E88219B53B0B0BF5.idx  (+9 more)
HelloTriangle/SandBox/: CMakeLists.txt
HelloTriangleExcercises/: main.c
Lighting/: CMakeLists.txt  fragmentShader.glsl  main.c
Lighting/include/: camera.h  cube.h  materials.h  shape.h  sphere.h  torus.h
Lighting/shaders/: lightCubeFragmentShader.glsl  lightCubeVertexShader.glsl  objectFragmentShader.glsl  objectVertexShader.glsl
Lighting/src/: cube.c  shape.c  torus.c
MatrixStack/: CMakeLists.txt  main.c  vertexShader.glsl
MatrixStack/include/: scene.h
MatrixStack/src/: scene.c
ModelImporter/: main.c
ModelImporter/include/: model.h
ModelImporter/src/: model.c
OpenGLProject2/: CMakeLists.txt  main.c
OpenGLTemplate/: CMakeLists.txt  main.c  vertexShader.glsl
OpenGLTemplate/include/: pyramid.h  shader.h  shape.h
OpenGLTemplate/src/: cube.c  pyramid.c  sphere.c
OrthoTest/: CMakeLists.txt  main.c
PointRenderer/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Pong/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Pong/include/: ball.h  game.h  paddle.h  sprite.h  texture.h
Pong/src/: ball.c  paddle.c  shader.c  sprite.c  texture.c
ProceduralShapes/: CMakeLists.txt  main.c
ProceduralShapes/include/: shape.h  torus.h
ProceduralShapes/src/: shape.c  sphere.c  torus.c
ProceduralSphere/: CMakeLists.txt  main.c
ProceduralSphere/include/: cube.h  shape.h  sphere.h  utils.h
ProceduralSphere/src/: cube.c  pyramid.c  shape.c  sphere.c
SandBox/: CMakeLists.txt  main.c
SceneTextures/: CMakeLists.txt  fragmentShader.glsl  main.c
SceneTextures/include/: scene.h
SceneTextures/src/: scene.c  texture.c
ShaderRotation/: CMakeLists.txt  main.c  vertexShader.glsl
Shaders/Excercises/: CMakeLists.txt  fragment.glsl  main.c  vertex.glsl
Shaders/Excercises/Shader/: CMakeLists.txt
Shaders/Excercises/Shader/include/: shader.h
Shaders/Excercises/Shader/src/: shader.c
Shaders/OscillatingColors/: CMakeLists.txt  main.c
Shaders/ShaderClassRedo/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Shaders/ShaderClassRedo/Shader/include/: shader.h
Shaders/ShaderClassRedo/Shader/src/: shader.c
Shaders/VertexColors/: CMakeLists.txt  fragment.glsl  main.c  vertex.glsl
Shaders/VertexColors/Shader/include/: shader.h
Shaders/VertexColors/Shader/src/: shader.c
Shapes/: CMakeLists.txt  main.c
Shapes/src/: scene.c
SolarSystem/: CMakeLists.txt  main.c
SolarSystem/include/: utils.h
SolarSystem/src/: matrixStack.c
TexturePyramids/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
TexturePyramids/include/: cube.h  scene.h  texture.h  utils.h
TexturePyramids/src/: cube.c  scene.c  texture.c
Textures/Excercises/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Textures/SettingTextures/: CMakeLists.txt  fragmentShader.glsl  main.c  vertexShader.glsl
Textures/SettingTextures/Shader/: CMakeLists.txt
Textures/SettingTextures/Shader/include/: shader.h
Textures/SettingTextures/Shader/src/: shader.c
Transformations/Excercises/: CMakeLists.txt  main.c
Transformations/Excercises/include/: shader.h
Transformations/TransformsIntro/: CMakeLists.txt  main.c  vertexShader.glsl
